--- a/css/template.css
+++ b/css/template.css
@@ -176,3 +176,25 @@ body.home #main-container .blur {
     filter: blur(0px);
     min-height: 750px;
 }
+
+body.home #main-container .contents {
+    position: absolute;
+    top: 100px;
+    left: 150px;
+    font-size: 30px;
+    color: #f1f1f1;
+}
+
+body.home #main-container .contents p {
+    padding-left: 65px;
+}
+
+body.home #main-container .contents span.material-icons {
+    margin-left: -65px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 15px;
+}
+
+body.home #main-container .contents .fax {
+    font-size: 16px;
+}
